初始化基础文件

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/HqmJoker/threejs#readme",
   "dependencies": {
     "dat.gui": "^0.7.9",
-    "parcel": "^2.8.3"
+    "parcel": "^2.8.3",
+    "three": "^0.150.1"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5"
