增加配置文件脚本命令

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "threejs学习练习",
   "main": "index.js",
   "scripts": {
+    "start": "parcel ./src/index.html",
     "dev": "parcel ./src/index.html",
     "build": "parcel build ./src/index.html"
   },
